Support attaching the research to the Task

--- a/popup.html
+++ b/popup.html
@@ -64,6 +64,10 @@ http://stackoverflow.com/questions/9498685/resize-popup-html-in-chrome-extension
       </div>
       <div class="right-column">
           <div id="use_window_details" class="use_details" title="Insert page titles and URLs from the current window"><div class="icon-use-link-arrow sprite"></div><div class="icon-use-link-arrow icon-use-window-arrow sprite"></div><div class="icon-use-link"></div></div>
+          <br/>
+          <div id="add_attachment_button" class="use_details" title="Attach this tab"><div class="icon-save"></div></div>
+          <br/>
+          <div id="add_attachments_button" class="use_details" title="Attach all tabs"><div class="icon-save"></div></div>
       </div>
     </div>
 
